{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 18,
  "lineage": "ddb0b2aa-cc57-ca92-41b1-4e70316cb095",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:151412017169:instance/i-0cf3d291d86150eb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf3d291d86150eb9",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "minecraft",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0132426ff0201508d",
            "private_dns": "ip-172-31-5-23.us-east-2.compute.internal",
            "private_ip": "172.31.5.23",
            "public_dns": "ec2-3-133-138-217.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.138.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d3ff22988af547fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "minecraft",
              "ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-aa05eac1",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0167b173559d27e3e",
              "sg-06518e5cd4764c99f"
            ]
          },
          "dependencies": [
            "aws_security_group.minecraft",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "minecraft",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151412017169:security-group/sg-06518e5cd4764c99f",
            "description": "Expose minecraft port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06518e5cd4764c99f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "minecraft port",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              }
            ],
            "name": "minecraft",
            "name_prefix": null,
            "owner_id": "151412017169",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "minecraft"
            },
            "timeouts": null,
            "vpc_id": "vpc-4ffa3d24"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151412017169:security-group/sg-0167b173559d27e3e",
            "description": "Allow ssh from home",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0167b173559d27e3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "74.136.116.3/32"
                ],
                "description": "ssh port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": null,
            "owner_id": "151412017169",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "minecraft"
            },
            "timeouts": null,
            "vpc_id": "vpc-4ffa3d24"
          }
        }
      ]
    }
  ]
}